--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -41,6 +41,8 @@
 		&-container
 			max-width: 1835px
 			+clr
+			+md
+				max-width: 1270px
 	&__mid
 		position: relative
 		background-color: #09A1D9
@@ -679,6 +681,8 @@
 	&_header
 		float: right
 		margin-right: 15px
+		+lg
+			margin-right: 0
 		+sm
 			margin-right: 0
 			margin-top: -2px
