--- a/src/sass/components/_extra.sass
+++ b/src/sass/components/_extra.sass
@@ -1,8 +1,8 @@
 .extra
-	padding: 40px 0 50px
+	padding: 40px
 	background-color: #f5f8fc
 	+lg
-		padding: 25px 0 30px
+		padding: 25px 0
 	&__container
 		+lg
 			max-width: 1400px
@@ -10,8 +10,6 @@
 			max-width: 1200px
 	&__title
 		text-align: center
-		+lg
-			font-size: 20px
 		+md
 			font-size: 18px
 		+xs
@@ -35,9 +33,7 @@
 			width: 48%
 	&__item
 		& + &
-			margin-top: 55px
-			+lg
-				margin-top: 35px
+			margin-top: 40px
 			+md
 				margin-top: 25px
 		&-list
@@ -70,7 +66,7 @@
 		&-title
 			padding-left: 120px
 			margin-bottom: 20px
-			+f("psb",19,26)
+			+f("psb",18,26)
 			+lg
 				padding-left: 90px
 				font-size: 17px
@@ -82,15 +78,13 @@
 				font-size: 14px
 		&-product
 			margin-bottom: 3px
-			font-size: 19px
-			+lg
-				font-size: 17px
+			font-size: 18px
 			+md
 				font-size: 15px
 			+xs
 				font-size: 14px
 	&__link
-		font-size: 20px
+		font-size: 18px
 		+lg
 			font-size: 18px
 		+md
@@ -116,7 +110,7 @@
 		&::after
 			content: ''
 			display: block
-			padding-top: 70.8%
+			padding-top: 70.9%
 	&__img
 		+coverdiv
 		+cover
