--- a/gulp/tasks/sprite-png/sprite.template.mustache
+++ b/gulp/tasks/sprite-png/sprite.template.mustache
@@ -20,8 +20,6 @@ $icons: map-merge($icons,('{{name}}': (X: {{px.offset_x}}, Y:{{px.offset_y}}, W:
   width: icon-attr($iconName, W)
   height: icon-attr($iconName, H)
   background-position: icon-attr($iconName, X) icon-attr($iconName, Y)
-@mixin sprite-position($iconName)
-  background-position: icon-attr($iconName, X) icon-attr($iconName, Y)
 @mixin sprite-retina($iconName)
   background-image: url(icon-attr($iconName, IMG))
   $width: icon-attr($iconName, W)
@@ -34,15 +32,27 @@ $icons: map-merge($icons,('{{name}}': (X: {{px.offset_x}}, Y:{{px.offset_y}}, W:
   $tw: icon-attr($iconName, TW)   
   $th: icon-attr($iconName, TH)
   background-size: $tw/2 $th/2
+@mixin sprite-triple($iconName)
+   background-image: url(icon-attr($iconName, IMG))
+   $width: icon-attr($iconName, W)
+   $height: icon-attr($iconName, H)
+   width: $width/3
+   height: $height/3
+   $x: icon-attr($iconName, X)
+   $y: icon-attr($iconName, Y)
+   background-position: $x/3 $y/3
+   $tw: icon-attr($iconName, TW)
+   $th: icon-attr($iconName, TH)
+   background-size: $tw/3 $th/3
 
 {{/options.functions}}
 
 @mixin s($i)
   +sprite($i)
-@mixin sp($i)
-  +sprite-position($i)
+@mixin st($i)
+  +sprite-triple($i)
 @mixin sr($i)
-  +sprite-retina($i)  
+  +sprite-retina($i)
 
 //{{#items}}
 //.icon-{{name}}
