--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -1,8 +1,8 @@
 .product
 	&__container
-		margin: 0 auto 55px
+		margin: 0 auto 50px
+		max-width: 1560px
 		+lg
-			max-width: 1500px
 			margin: 0 auto 35px
 		+md
 			max-width: 1200px
@@ -14,7 +14,7 @@
 		align-items: center
 		justify-content: space-between
 		padding: 1px 30px 0 25px
-		margin-bottom: 40px
+		margin-bottom: 30px
 		background-color: #EBECEC
 		&::after
 			content: ''
@@ -50,7 +50,7 @@
 			display: flex
 			align-items: center
 			color: #000
-			+f("oss",19,22)
+			+f("oss",18,22)
 			+lg
 				font-size: 17px
 			+md
@@ -68,19 +68,19 @@
 			+md
 				margin-right: 8px
 			&.icon-machine
-				font-size: 30px
-				+md
-					font-size: 20px
-			&.icon-shirts
-				font-size: 25px
-				+md
-					font-size: 18px
-			&.icon-cups
 				font-size: 27px
 				+md
 					font-size: 20px
-			&.icon-books
+			&.icon-shirts
+				font-size: 23px
+				+md
+					font-size: 18px
+			&.icon-cups
 				font-size: 25px
+				+md
+					font-size: 20px
+			&.icon-books
+				font-size: 24px
 				+md
 					font-size: 18px
 			&.icon-souvenirs
@@ -88,11 +88,11 @@
 				+md
 					font-size: 20px
 			&.icon-pictures
-				font-size: 28px
+				font-size: 26px
 				+md
 					font-size: 21px
 			&.icon-balloons
-				font-size: 29px
+				font-size: 27px
 				+md
 					font-size: 23px
 			&.icon-lovers
@@ -128,9 +128,9 @@
 			display: inline-block
 			vertical-align: middle
 			overflow: hidden
-			padding: 6px 40px 6px 35px
-			height: 42px
-			font-size: 19px
+			padding: 4px 36px 4px 17px
+			height: 39px
+			font-size: 18px
 			line-height: 32px
 			color: #2d4777
 			background-color: #FCFCFC
@@ -208,7 +208,7 @@
 		display: flex
 		align-items: flex-start
 		justify-content: space-between
-		flex-basis: (990/1680 * 100%)
+		width: (900/1530 * 100%)
 		+lg
 			flex-basis: 60%
 		+md
@@ -276,8 +276,8 @@
 		bottom: 10px
 		z-index: 5
 		display: block
-		width: 67px
-		height: 67px
+		width: 60px
+		height: 60px
 		text-align: center
 		background: rgba(#E6EEFF, .8)
 		transition: transform .45s .2s, opacity .45s .2s, background 0s
@@ -303,16 +303,16 @@
 		display: inline-block
 		vertical-align: middle
 		fill: #7B7F8A
-		font-size: 40px
+		font-size: 33px
 		+md
 			font-size: 25px
 
 	// <==================== item starts here ====================================>
 	&__item
 		position: relative
-		padding-bottom: 40px
-		min-height: 470px
-		flex-basis: (305/990 * 100%)
+		padding-bottom: 36px
+		min-height: 435px
+		flex-basis: (280/900 * 100%)
 		+lg
 			min-height: 400px
 		+md
@@ -330,8 +330,9 @@
 			position: relative
 			transition: transform .3s
 			-webkit-tap-highlight-color: transparent
+			+gpu
 			&.is-active
-				transform: translateY(-3px)
+				transform: translate3d(0, -3px ,0)
 			&.is-active .decor__line
 				height: 2px
 			&.is-active .decor__line::before
@@ -342,7 +343,7 @@
 				opacity: 1
 				transform: scale(1)
 		&-pic
-			height: 305px
+			height: 280px
 			position: relative
 			z-index: 1
 			display: flex
@@ -353,10 +354,9 @@
 			+md
 				height: 214px
 			img
-				+lg
-					width: 100%
-					max-height: 100%
-					object-fit: contain
+				width: 100%
+				height: 100%
+				object-fit: contain
 			&_xs
 				height: 122px
 				width: 122px
@@ -364,21 +364,17 @@
 			margin-top: 20px
 			color: #2f2e2d
 			line-height: (26/18)
-			font-size: 18px
+			+f("oss",16)
 			+md
 				margin-top: 15px
 		&-title
-			+f("oss")
-			+lg
-				font-size: 17px
+			color: #000000
 			+md
 				font-size: 13px
 		&-descr
-			+lg
-				font-size: 17px
+			color: #797774
 			+md
-				color: #666666
-				+f('oss',13)
+				font-size: 13px
 			+sm
 				font-size: 12px
 		
@@ -390,7 +386,7 @@
 			display: flex
 			align-items: center
 	&__buy-opt
-		font-size: 21px
+		font-size: 19px
 		line-height: 12px
 		+f("psb")
 		color: #FCBD7E
@@ -416,8 +412,8 @@
 	&__cart-add
 		position: relative
 		padding: 0 40px 0 5px
-		height: 40px
-		min-width: 150px
+		height: 36px
+		min-width: 133px
 		margin-left: auto
 		background-color: $blue-light
 		white-space: nowrap
@@ -426,19 +422,18 @@
 			height: 28px
 			min-width: 102px
 		.product__val-icon
-			font-size: 16px
-			fill:	 #bd1711
-			+lg
-				font-size: 14px
+			font-size: 14px
+			fill:	 #E63833
 			+md
 				font-size: 12px
 		&::after
 			position: absolute
-			right: 0
-			top: 0
+			right: -2px
+			top: -2px
 			z-index: 1
 			content: ''
 			+s('btn_cart')
+			transform: scale(.9)
 			+md
 				top: -6px
 				right: -6px
@@ -450,30 +445,28 @@
 	&__price-current
 		display: inline-block
 		vertical-align: middle
-		color: #bd1711
-		+f("psb",21)
-		line-height: 12px
+		color: #E63833
+		+f("psb",19)
+		line-height: 15px
 		+lg
 			font-size: 19px
 		+md
 			font-size: 15px
 	&__suggest
-		display: flex
-		flex-direction: column
-		align-items: center
-		flex-basis: (650/1680 * 100%)
+		position: relative
+		width: (590/1530 * 100%)
 		padding: 30px 30px 35px 30px
 		+md
 			padding: 25px 15px 20px 15px
-			flex-basis: 38.8%
+			width: 38.8%
 		+sm
 			padding: 15px 10px 15px 10px
-			flex-basis: 36.8%
+			width: 36.8%
 		+xs
-			flex-basis: 100%
+			width: 100%
 			margin-top: 15px
 		.decor__line
-			width: 92%
+			width: 93.8%
 			+sm
 				width: 90%
 			+xs
@@ -485,6 +478,8 @@
 		&_border
 			border-radius: 35px
 			border: 2px dashed #274F7F
+		&-text
+			margin-bottom: 40px
 		&-title
 			padding-left: 35px
 			align-self: flex-start
@@ -498,12 +493,12 @@
 			+xs
 				font-size: 16px
 		&-descr
-			margin: 30px 0
-			text-indent: 35px
+			margin: 15px 0
+			text-indent: 26px
 			line-height: 1.3
+			font-size: 19px
 			+lg
 				margin: 15px 0
-				font-size: 18px
 			+md
 				font-size: 16px
 			+sm
@@ -516,7 +511,6 @@
 			+md
 				margin: 0 0 5px
 		&-links
-			align-self: stretch
 			+clr
 			+md
 				margin-bottom: 10px
@@ -525,6 +519,7 @@
 			+xs
 				margin: 15px 0 15px 8px
 			&_more-text
+				margin: 0 -17px
 				.product__suggest-col
 					width: 50%
 					margin-left: 0
@@ -540,8 +535,8 @@
 			display: flex
 			flex-direction: column
 			align-items: flex-start
-			padding: 0 0 0 25px
-			margin: 0 9px 10px
+			padding: 0 0 0 20px
+			margin: 0 5px 10px
 			border-left: 1px solid #D8DFE6
 			+md
 				margin: 0 21px 10px
@@ -567,7 +562,7 @@
 			display: inline-block
 			line-height: 1
 			color: #003D82
-			font-size: 21px
+			font-size: 20px
 			+lg
 				font-size: 18px
 			+md
@@ -583,7 +578,10 @@
 				+md
 					margin-top: 5px
 		&-btn
-			margin-top: auto
+			position: absolute
+			left: 50%
+			transform: translateX(-50%)
+			bottom: 35px
 	&__admin-change
 		position: absolute
 		z-index: 2
