--- a/src/sass/components/_request.sass
+++ b/src/sass/components/_request.sass
@@ -1,5 +1,5 @@
 .request
-	padding: 95px 0
+	padding: 80px 0
 	background-color: #ececec
 	+lg
 		padding: 50px 0
@@ -8,7 +8,7 @@
 	+xs
 		padding: 20px 0 10px
 	&__container
-		max-width: 1114px
+		max-width: 1024px
 	&__title
 		margin-bottom: 40px
 		text-align: center
@@ -20,15 +20,16 @@
 			font-size: 17px
 	&__descr
 		text-align: center
-		font-size: 22px
-		+lg
-			font-size: 19px
+		font-size: 20px
 		+md
 			font-size: 16px
 		+xs
 			font-size: 15px
 	&__link
 		color: #1166ab
+		border-bottom: 1px solid #1166ab
+		&:hover
+			border-bottom-color: transparent
 	&__wrap
 		margin: 40px 0 0
 		+lg
@@ -45,10 +46,11 @@
 		position: relative
 		flex-basis: 31.26143%
 		border: 1px solid #5d8dcd
+		overflow: hidden
 		&::after
 			position: absolute
-			left: 0
-			top: 0
+			left: -1px
+			top: -2px
 			z-index: 1
 			content: ''
 			+md
@@ -65,11 +67,11 @@
 		display: inline-block
 		vertical-align: middle
 		width: 100%
-		padding: 0 5px 0 68px
-		height: 38px
-		line-height: 38px
+		padding: 0 5px 0 65px
+		height: 35px
+		line-height: 35px
 		background-color: #fff
-		+f("ver",16)
+		+f("ver",15)
 		+placeholder-color(#999999)
 		+md
 			padding: 0 5px 0 50px
@@ -78,17 +80,18 @@
 			font-size: 13px
 	&__message-wrap
 		position: relative
-		padding-left: 52px
+		padding-left: 50px
 		border: 1px solid #5d8dcd
 		background-color: #f3f4f4
+		overflow: hidden
 		+md
 			padding-left: 40px
 		&::after
 			content: ''
 			position: absolute
 			z-index: 1
-			top: 0
-			left: 0
+			top: -3px
+			left: -3px
 			+s('dots_form')
 			+md
 				top: -6px
@@ -96,13 +99,13 @@
 				transform: scale(.75)
 	&__message
 		display: block
-		padding: 13px 15px 15px 17px
-		min-height: 180px
+		padding: 9px 15px 15px 16px
+		min-height: 165px
 		width: 100%
 		background-color: #fff
 		resize: none
 		border: none
-		+f("ver",16)
+		+f("ver",15)
 		+placeholder-color(#999999)
 		+tr(min-height .3s)
 		+md
@@ -110,13 +113,13 @@
 			padding: 6px 12px 12px 8px
 			font-size: 13px
 		&.extended
-			min-height: 280px
+			min-height: 230px
 			+md
 				min-height: 220px
 		&-extend
 			position: absolute
-			width: 70px
-			height: 30px
+			width: 65px
+			height: 29px
 			background-color: #f7f7f7
 			bottom: 9px
 			right: 7px
@@ -129,60 +132,41 @@
 			font-size: 21px
 			fill: #C4C4C4
 	&__send
-		margin-top: 15px
-		&-row
-			display: flex
-		&-btn
-			position: relative
-			margin-left: auto
-			margin-right: 23px
-			padding: 0 70px 0 5px
-			min-width: 255px
-			line-height: 52px
-			height: 52px
-			color: #fff
-			background: #6ca5db
-			text-align: right
-			border-bottom: 2px solid #a7b8c9
-			+f("ver",21)
-			+md
-				padding: 0 61px 0 5px
-				min-width: 196px
-				font-size: 15px
-				line-height: 38px
-				height: 38px
-			&::after
-				position: absolute
-				top: 0
-				right: 0
-				+s('send')
-				content: ''
-				+md
-					top: -7px
-					right: -8px
-					transform: scale(.73)
-			&:hover
-				background-color: #63afed
-				border-bottom-color: #ffff74
-			&:hover::after
-				+s('send-hvr')
-			&:active
-				background-color: #415c89
-				border-bottom-color: #a95a63
-			&:active::after
-				+s('send-act')
-	
-// load images
-.load
-	&__add
+		margin-top: 20px
+		font-size: 0
+	&__send-col
 		display: inline-block
-		margin-bottom: 20px
-	&__text
-		margin-bottom: 30px
-		max-width: 165px
+		vertical-align: top
+		font-size: 0
+	&__send-col:nth-child(1)
+		width: percentage(600 / 994)
+		white-space: nowrap
+	&__send-col:nth-child(2)
+		padding-right: 10px
+		width: percentage(390 / 994)
+		text-align: right
+	&__send-btn
+		+md
+			padding: 0 73px 0 5px
+			min-width: 196px
+			font-size: 15px
+			line-height: 38px
+			height: 38px
+	&__send-add
+		display: inline-block
+		vertical-align: top
+		margin-right: 15px
+		white-space: nowrap
+	&__send-text
+		display: inline-block
+		vertical-align: top
+		margin-left: 20px
+		margin-top: -3px
+		max-width: 160px
 		padding-left: 3px
-		+f("ver",19)
+		+f("ver",18)
 		color: #040404
+		white-space: normal
 		+lg
 			font-size: 18px
 		+md
@@ -190,13 +174,16 @@
 			margin-bottom: 10px
 		+sm
 			font-size: 13px
-	&__btn-add
+	&__send-btn-add
+		display: inline-block
+		vertical-align: middle
 		padding: 0 5px
-		max-width: 140px
-		min-height: 126px
+		max-width: 128px
+		min-height: 114px
 		color: #fff
 		background-color: #80C9E8
-		+f("ver",18)
+		white-space: normal
+		+f("ver",16)
 		text-transform: uppercase
 		border-bottom: 1px solid #A8B3BF
 		+lg
@@ -206,10 +193,11 @@
 		&::after
 			content: ''
 			display: block
-			+sr('file')
 			margin: 3px auto 0
+			+sr('file')
+			transform: scale(.9)
 			+md
-			    transform: scale(.8)
+				transform: scale(.8)
 		&:hover::after
 			+sr('file-hvr')
 		&:active::after
@@ -220,19 +208,19 @@
 		&:active
 			background: #2A578A
 			border-bottom-color: #E63E2D
-	&__files
+	&__send-files
 		display: inline-block
 		vertical-align: bottom
 		font-size: 0
-		margin-left: -30px
-		max-width: 510px
-	&__item
+		white-space: normal
+		width: percentage(280 / 600)
+	&__send-item
 		position: relative
 		display: inline-block
-		margin-left: 20px
-		margin-bottom: 20px
-		width: 142px
-		height: 130px
+		vertical-align: middle
+		height: 116px
+		width: 130px
+		margin-right: 20px
 		+vertical
 		+md
 			width: 110px
@@ -241,13 +229,16 @@
 			margin-bottom: 15px
 		&:last-child
 			margin-right: 0
+		&:nth-child(2n)
+			margin-right: 0
+		&:nth-child(2) ~ &
+			margin-top: 20px
 		img
 			display: inline-block
 			vertical-align: middle
-			+md
-				height: 100%
-				object-fit: contain
-				width: 100%
+			width: 100%
+			height: 100%
+			object-fit: contain
 		.decor__line
 			+md
 				width: 65%
@@ -258,12 +249,12 @@
 		.decor__line::after
 			+md
 				border-width: 15px 16px 0 0
-	&__btn-close
+	&__send-btn-close
 		position: absolute
 		right: -15px
 		top: -15px
-		width: 33px
-		height: 33px
+		width: 30px
+		height: 30px
 		border-radius: 50%
 		background: #E63833
 		border: 3px solid #fff
@@ -274,17 +265,14 @@
 			border-width: 2px
 		&:hover
 			background: #3e5b8a
-	&__icon-close
+	&__send-icon-close
 		fill: #fff
 		+vcenter
-		font-size: 13px
+		font-size: 12px
 		+md
 			font-size: 10px
-	&__message
-		margin: 0 0 20px 20px
-		+f("ver",26)
-		+lg
-			font-size: 22px
+	&__send-message
+		+f("ver",20)
 		+md
 			font-size: 16px
 		+sm
@@ -293,11 +281,7 @@
 			content: ''
 			display: inline-block
 			vertical-align: -30px
-			+sr('mark')
-			+lg
-				transform: scale(.7)
+			transform: scale(.7)
+			+st('mark')
 			+md
 				transform: scale(.4)
-				margin-right: -10px
-	&_home
-		margin-top: -40px
