--- a/src/sass/components/_extra.sass
+++ b/src/sass/components/_extra.sass
@@ -4,10 +4,7 @@
 	+lg
 		padding: 25px 0
 	&__container
-		+lg
-			max-width: 1400px
-		+lg
-			max-width: 1200px
+		max-width: 1460px
 	&__title
 		text-align: center
 		+md
@@ -23,8 +20,8 @@
 			margin-top: 20px
 	&__text
 		display: inline-block
-		vertical-align: top
-		width: (555/1680 * 100%)
+		vertical-align: middle
+		width: 35%
 		+md
 			vertical-align: middle
 		+sm
@@ -41,7 +38,7 @@
 			flex-direction: column
 			align-items: flex-start
 			position: relative
-			padding-left: 120px
+			padding-left: 110px
 			+lg
 				padding-left: 90px
 			+lg
@@ -64,7 +61,7 @@
 		.icon-framing
 			font-size: 83px
 		&-title
-			padding-left: 120px
+			padding-left: 110px
 			margin-bottom: 20px
 			+f("psb",18,26)
 			+lg
@@ -77,7 +74,6 @@
 				margin-bottom: 10px
 				font-size: 14px
 		&-product
-			margin-bottom: 3px
 			font-size: 18px
 			+md
 				font-size: 15px
@@ -93,14 +89,15 @@
 			font-size: 14px
 	&__links
 		margin-top: 20px
-		padding-left: 120px
+		padding-left: 110px
 		+lg
 			padding-left: 50px
 	&__pic
 		position: relative
 		display: inline-block
-		vertical-align: top
-		width: (930/1680 * 100%)
+		vertical-align: middle
+		width: 62%
+		margin-left: -3.5%
 		+md
 			vertical-align: middle
 		+sm
