--- a/src/templates/partials/_footer.jade
+++ b/src/templates/partials/_footer.jade
@@ -15,21 +15,19 @@
 					+e.item
 						+e.A.link(href="#!") Главная
 					+e.item
-						+e.A.link(href="#!") Услуги
-					+e.item
-						+e.A.link(href="#!") Сувениры по тематике
+						+e.A.link(href="#!") Услуги фирмы
 					+e.item
 						+e.A.link(href="#!") О нас
-					+e.item
-						+e.A.link(href="#!") Новости
 					+e.item
 						+e.A.link(href="#!") Доставка
 					+e.item
 						+e.A.link(href="#!") Оплата
 					+e.item
-						+e.A.link(href="#!") Оптовые цены
+						+e.A.link(href="#!") Новости
 					+e.item
-						+e.A.link(href="#!") Контакты
+						+e.A.link(href="#!") Лучшие дизайны
+					+e.item
+						+e.A.link(href="#!") Оптовые цены
 		+e.col
 			+e.ADDRESS.address
 				+e.address-col
