--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -29,6 +29,10 @@
 				transform: scale(.9)
 				+md
 					transform: scale(.67)
+				+xs
+					transform: scale(.55)
+					position: relative
+					top: -7px
 			&_pic-1::after
 				+s('benefit_1')
 			&_pic-2::after
@@ -50,7 +54,7 @@
 				padding-left: 10px
 				line-height: 1.2
 			+xs
-				padding-left: 5px
+				padding-left: 0
 				padding-right: 0
 				font-size: 13px
 	&_default
