--- a/src/sass/components/_extra.sass
+++ b/src/sass/components/_extra.sass
@@ -25,7 +25,7 @@
 		+md
 			vertical-align: middle
 		+sm
-			width: 50%
+			width: 45%
 		+xs
 			width: 48%
 	&__item
@@ -40,9 +40,7 @@
 			position: relative
 			padding-left: 110px
 			+lg
-				padding-left: 90px
-			+lg
-				padding-left: 50px
+				padding-left: 80px
 		&-icon, &-icon_parts::before
 			position: absolute
 			left: 0
@@ -65,11 +63,10 @@
 			margin-bottom: 20px
 			+f("psb",18,26)
 			+lg
-				padding-left: 90px
 				font-size: 17px
 			+md
 				font-size: 15px
-				padding-left: 50px
+				padding-left: 80px
 			+xs
 				margin-bottom: 10px
 				font-size: 14px
@@ -91,7 +88,7 @@
 		margin-top: 20px
 		padding-left: 110px
 		+lg
-			padding-left: 50px
+			padding-left: 80px
 	&__pic
 		position: relative
 		display: inline-block
@@ -100,8 +97,9 @@
 		margin-left: -3.5%
 		+md
 			vertical-align: middle
+			margin-left: -5.5%
 		+sm
-			width: 50%
+			width: 55%
 		+xs
 			width: 52%
 		&::after
