--- a/src/sass/components/_rubric.sass
+++ b/src/sass/components/_rubric.sass
@@ -68,6 +68,9 @@
 		+xs
 			padding: 9px 13px 9px 10px
 			font-size: 11px
+		&_tablet
+			+xs
+				padding: 9px 12px 9px 2px
 		&:hover
 			background-color: darken(#F5F5F5, 7)
 		span
