--- a/src/sass/components/_socials.sass
+++ b/src/sass/components/_socials.sass
@@ -63,8 +63,8 @@
 			width: 28px
 			height: 28px
 			+md
-				width: 20px
-				height: 20px
+				width: 22px
+				height: 22px
 			&_vk
 				background-color: #1E78B0
 			&_fb
@@ -77,22 +77,28 @@
 				background-color: #E63E2D
 			.icon-gp
 				font-size: 13px
+				+md
+					font-size: 11px
 				+sm
 					font-size: 10px
 			.icon-tw
 				font-size: 13px
-				+sm
+				+md
 					font-size: 10px
 			.icon-vk
 				font-size: 11px
+				+md
+					font-size: 9px
 				+sm
 					font-size: 9px
 			.icon-od
 				font-size: 17px
-				+sm
+				+md
 					font-size: 15px
 			.icon-fb
 				font-size: 16px
+				+md
+					font-size: 13px
 				+sm
 					font-size: 12px
 	
