--- a/src/templates/components/_rubric.jade
+++ b/src/templates/components/_rubric.jade
@@ -62,7 +62,7 @@ if rubricClass ? rubricClass : rubricClass = []
 			+e.item
 				+e.UL.list
 					+e.list-item
-						+e.A(href="#!").list-link._color
+						+e.A(href="#!").list-link._color._tablet
 							+e.SPAN СУВЕНИРЫ ПО ТЕМАТИКЕ
 							+icon('icon-arr-def','rubric__list-icon')
 						+e.UL.sub-list
