--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -306,8 +306,7 @@
 		font-size: 33px
 		+md
 			font-size: 25px
-
-	// <==================== item starts here ====================================>
+	// <============== item starts here ==============>
 	&__item
 		position: relative
 		padding-bottom: 36px
@@ -463,10 +462,13 @@
 			padding: 15px 10px 15px 10px
 			width: 36.8%
 		+xs
+			padding: 15px 10px 25px 10px
 			width: 100%
 			margin-top: 15px
 		.decor__line
 			width: 93.8%
+			+md
+				width: 91.9%
 			+sm
 				width: 90%
 			+xs
@@ -515,17 +517,17 @@
 			+md
 				margin-bottom: 10px
 			+sm
-				margin: 20px 0 10px 18px
-			+xs
-				margin: 15px 0 15px 8px
+				margin: 7px 0 10px 18px
 			&_more-text
-				margin: 0 -17px
+				margin: 0 -15px
 				.product__suggest-col
 					width: 50%
 					margin-left: 0
 					padding: 0 5px 0 8px
 					+md
 						padding: 0 5px 0 5px
+						&:nth-child(1)
+							border-left: none
 					+sm
 						padding: 0 5px 0 10px
 						width: 100%
@@ -539,7 +541,7 @@
 			margin: 0 5px 10px
 			border-left: 1px solid #D8DFE6
 			+md
-				margin: 0 21px 10px
+				margin: 0 10px 10px
 				padding: 0 0 0 15px
 		&-col
 			float: left
@@ -582,6 +584,10 @@
 			left: 50%
 			transform: translateX(-50%)
 			bottom: 35px
+			+md
+				bottom: 20px
+			+sm
+				bottom: 15px
 	&__admin-change
 		position: absolute
 		z-index: 2
