--- a/src/sass/components/_request.sass
+++ b/src/sass/components/_request.sass
@@ -141,10 +141,17 @@
 	&__send-col:nth-child(1)
 		width: percentage(600 / 994)
 		white-space: nowrap
+		+xs
+			width: 100%
 	&__send-col:nth-child(2)
 		padding-right: 10px
 		width: percentage(390 / 994)
 		text-align: right
+		+xs
+			width: 100%
+			margin-top: 20px
+			padding-right: 0
+			text-align: center
 	&__send-btn
 		+md
 			padding: 0 73px 0 5px
@@ -167,13 +174,10 @@
 		+f("ver",18)
 		color: #040404
 		white-space: normal
-		+lg
-			font-size: 18px
 		+md
-			font-size: 16px
-			margin-bottom: 10px
+			font-size: 15px
 		+sm
-			font-size: 13px
+			font-size: 14px
 	&__send-btn-add
 		display: inline-block
 		vertical-align: middle
@@ -214,6 +218,8 @@
 		font-size: 0
 		white-space: normal
 		width: percentage(280 / 600)
+		+xs
+			width: 59%
 	&__send-item
 		position: relative
 		display: inline-block
@@ -225,14 +231,20 @@
 		+md
 			width: 110px
 			height: 98px
-			margin-left: 15px
-			margin-bottom: 15px
+			margin-right: 15px
 		&:last-child
 			margin-right: 0
 		&:nth-child(2n)
 			margin-right: 0
+			+xs
+				margin-right: 20px
 		&:nth-child(2) ~ &
 			margin-top: 20px
+			+xs
+				margin-top: 0
+		&:nth-child(3) ~ &
+			+xs
+				margin-top: 20px
 		img
 			display: inline-block
 			vertical-align: middle
@@ -241,14 +253,14 @@
 			object-fit: contain
 		.decor__line
 			+md
-				width: 65%
+				width: 82%
 		.decor__line::before
 			+md
 				border-width: 0 0 16px 15px
-				right: -23px
+				right: -5px
 		.decor__line::after
 			+md
-				border-width: 15px 16px 0 0
+				border-width: 15px 15px 0 0
 	&__send-btn-close
 		position: absolute
 		right: -15px
@@ -274,7 +286,7 @@
 	&__send-message
 		+f("ver",20)
 		+md
-			font-size: 16px
+			font-size: 15px
 		+sm
 			font-size: 14px
 		&::before
