--- a/src/templates/components/_request.jade
+++ b/src/templates/components/_request.jade
@@ -33,7 +33,7 @@
 								+e.BUTTON(type="button").send-btn-close
 									+icon('icon-close','request__send-icon-close')
 								.decor__line
-						+e.send-message Письмо отправлено!
+						+e.send-message(style='display: none;') Письмо отправлено!
 					+e.send-col
 						+b.BUTTON(type='submit').send-btn.request__send-btn Отправить
 						+e.DIV(style='margin: 15px auto 0; width: 260px; height: 47px; border: 2px dashed #000; font-size: 22px; text-align: center;') Место под каптчу
