--- a/src/sass/helpers/_fonts.sass
+++ b/src/sass/helpers/_fonts.sass
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600&subset=cyrillic,cyrillic-ext')
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic,cyrillic-ext')
-+font("Verdana", verdana)
++font("Verdana", Verdana)
 +font("TruthCYRMedium", TruthCYRMedium)
 
 =f($name, $font-size: null, $line-height: null, $font-weight: null)
