--- a/src/templates/components/_benefits.jade
+++ b/src/templates/components/_benefits.jade
@@ -4,13 +4,17 @@ if benefitsClass ? benefitsClass : benefitsClass = []
 	+e.container.container
 		+e.item
 			+e.item-pic._pic-1
-			+e.item-text Экономьте и заказывайте у прямого производителя!
+			+e.item-text Экономьте и заказывайте у
+				br
+				| прямого производителя!
 		+e.item
 			+e.item-pic._pic-2
 			+e.item-text Если вас что-то не устроит, вы можете вернуть штучный товар.
 		+e.item
 			+e.item-pic._pic-3
-			+e.item-text Доверьтесь профессионалам, у нас большой опыт работы!
+			+e.item-text Доверьтесь профессионалам,
+				br
+				| у нас большой опыт работы!
 
 
 
