--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -12,17 +12,29 @@
 	&__container
 		display: flex
 		justify-content: space-between
-		max-width: 1360px
+		max-width: 1370px
 		+md
 			max-width: 1200px
 	&__item
 		display: flex
 		flex-basis: 33.33333%
 		align-items: center
+		&:nth-child(2)
+			padding-left: 20px
+			+sm
+				padding-left: 0
+		&:nth-child(3)
+			padding-left: 40px
+			+sm
+				padding-left: 0
 		&-pic
 			+sm
 				width: 100px
 				height: 100px
+			+xs
+				position: relative
+				width: 80px
+				height: 80px
 			&::after
 				content: ''
 				display: block
@@ -32,7 +44,8 @@
 				+xs
 					transform: scale(.55)
 					position: relative
-					top: -7px
+					top: -9px
+					left: -23px
 			&_pic-1::after
 				+s('benefit_1')
 			&_pic-2::after
@@ -50,6 +63,7 @@
 			+md
 				font-size: 15px
 			+sm
+				margin-top: 15px
 				font-size: 14px
 				padding-left: 10px
 				line-height: 1.2
