--- a/src/templates/components/_extra.jade
+++ b/src/templates/components/_extra.jade
@@ -31,6 +31,7 @@
 						+e.item-product Изготовление рам для картин
 						+e.item-product Каталог репродукций для интерьеров
 				+e.links
-					+e.A.link.link-decor(href="#!") Все услуги фирмы
+					+e.A.link.link-decor(href="#!")
+						+e.SPAN Все услуги фирмы
 			+e.pic
-				+e.img(style="background-image: url(img/content/extra_img.png)")
+				+e.img(style="background-image: url(img/bg/extra_img.svg)")
