--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -5,6 +5,6 @@
 @import lib/slick
 @import lib/stepper
 @import common
-@import contacts
-@import main
+@import pages/contacts
+@import components/blocks
 @import components/all
