--- a/src/sass/components/_extra.sass
+++ b/src/sass/components/_extra.sass
@@ -1,10 +1,12 @@
 .extra
 	padding: 40px
 	background-color: #f5f8fc
-	+lg
-		padding: 25px 0
+	+sm
+		padding: 30px 0
 	&__container
 		max-width: 1460px
+		+lg
+			max-width: 1200px
 	&__title
 		text-align: center
 		+md
@@ -25,9 +27,9 @@
 		+md
 			vertical-align: middle
 		+sm
-			width: 45%
+			width: 40%
 		+xs
-			width: 48%
+			width: 43%
 	&__item
 		& + &
 			margin-top: 40px
@@ -40,7 +42,7 @@
 			position: relative
 			padding-left: 110px
 			+lg
-				padding-left: 80px
+				padding-left: 65px
 		&-icon, &-icon_parts::before
 			position: absolute
 			left: 0
@@ -66,7 +68,7 @@
 				font-size: 17px
 			+md
 				font-size: 15px
-				padding-left: 80px
+				padding-left: 65px
 			+xs
 				margin-bottom: 10px
 				font-size: 14px
@@ -88,20 +90,20 @@
 		margin-top: 20px
 		padding-left: 110px
 		+lg
-			padding-left: 80px
+			padding-left: 65px
 	&__pic
 		position: relative
 		display: inline-block
 		vertical-align: middle
-		width: 62%
+		width: 67%
 		margin-left: -3.5%
 		+md
 			vertical-align: middle
 			margin-left: -5.5%
 		+sm
-			width: 55%
+			width: 65%
 		+xs
-			width: 52%
+			width: 62%
 		&::after
 			content: ''
 			display: block
